--- a/popup.html
+++ b/popup.html
@@ -12,9 +12,9 @@
 
 <body>
     <div class="container">
-        <input type="text" id="address" />
+        <!-- <input type="text" id="address" />
         <button id="btn">거래내역 조회</button>
-        <ol id="linksList"></ol>
+        <ol id="linksList"></ol> -->
         <a href="popup01.html">
             <button id="goPage">지갑 만들기</button>
         </a>
