--- a/popup01.html
+++ b/popup01.html
@@ -5,16 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YOUTUBE</title>
+    <title>지갑 만들기</title>
     <link rel="stylesheet" href="style.css">
     <!-- <style></style> -->
 </head>
 
 <body>
     <div class="container">
-        <input type="text" id="address" />
-
-        <button id="btn">거래내역 조회</button>
+        <button id="make_wallet_btn">지갑 만들기</button>
         <ol id="linksList"></ol>
         <a href="popup02.html">
             <button id="goPage">next</button>
